# tesseract_python

./: .gitignore  CLAUDE.md  README.md  TESSERACT_PLANNING_API_ISSUES.md  build_tesseract_cpp.sh  dependencies.rosinstall  dependencies_with_ext.rosinstall  doxygen.config  env.sh  run_examples.sh  run_exampls.sh  run_failing_tests.sh  run_tests.sh  tesseract_selftest_report.txt
tesseract_nanobind/: .env  CMakeLists.txt  DEPENDENCIES.md  MIGRATION_NOTES.md  QUICKSTART.md  README.md  environment.yml  pyproject.toml  setup_conda_env.sh
tesseract_nanobind/config/: task_composer_plugins_no_trajopt_ifopt.yaml
tesseract_nanobind/src/tesseract_collision/: tesseract_collision_bindings.cpp
tesseract_nanobind/src/tesseract_command_language/: tesseract_command_language_bindings.cpp
tesseract_nanobind/src/tesseract_common/: tesseract_common_bindings.cpp
tesseract_nanobind/src/tesseract_environment/: tesseract_environment_bindings.cpp
tesseract_nanobind/src/tesseract_kinematics/: tesseract_kinematics_bindings.cpp
tesseract_nanobind/src/tesseract_motion_planners/: tesseract_motion_planners_bindings.cpp
tesseract_nanobind/src/tesseract_motion_planners_descartes/: tesseract_motion_planners_descartes_bindings.cpp
tesseract_nanobind/src/tesseract_motion_planners_ompl/: tesseract_motion_planners_ompl_bindings.cpp
tesseract_nanobind/src/tesseract_motion_planners_simple/: tesseract_motion_planners_simple_bindings.cpp
tesseract_nanobind/src/tesseract_motion_planners_trajopt/: tesseract_motion_planners_trajopt_bindings.cpp
tesseract_nanobind/src/tesseract_motion_planners_trajopt_ifopt/: tesseract_motion_planners_trajopt_ifopt_bindings.cpp
tesseract_nanobind/src/tesseract_robotics/: __init__.py  selftest.py
tesseract_nanobind/src/tesseract_srdf/: tesseract_srdf_bindings.cpp
tesseract_nanobind/src/tesseract_state_solver/: tesseract_state_solver_bindings.cpp
tesseract_nanobind/src/tesseract_task_composer/: tesseract_task_composer_bindings.cpp
tesseract_nanobind/tests/: tesseract_support_resource_locator.py  test_examples.py  test_kinematics_plugin_loading.py
tesseract_nanobind/tests/benchmarks/: plot_benchmarks.py  test_planning_benchmarks.py
tesseract_nanobind/tests/examples/: test_example_parity.py  test_examples.py
tesseract_nanobind/tests/tesseract_collision/: conftest.py  test_collision_box_cone_unit.py  test_collision_mesh_mesh_unit.py
tesseract_nanobind/tests/tesseract_environment/: test_environment_commands.py  test_tesseract_environment.py
tesseract_nanobind/tests/tesseract_geometry/: test_tesseract_geometry.py
tesseract_nanobind/tests/tesseract_kinematics/: test_kdl_kinematics.py  test_opw_kinematics.py
tesseract_nanobind/tests/tesseract_motion_planners/: test_descartes_planner.py  test_motion_planners.py  test_trajopt_planner.py
tesseract_nanobind/tests/tesseract_planning/: test_planning_api.py
tesseract_nanobind/tests/tesseract_task_composer/: test_tesseract_task_composer.py
tesseract_nanobind/tests/tesseract_time_parameterization/: __init__.py
tesseract_python/: CMakeLists.txt  colcon.pkg  package.xml
tesseract_python/cmake/: __package_init__.py.in  __package_wheel_init__.py.in  get_py_install_target_path.cmake  get_py_install_target_path.py  install_build_wheel.cmake.in  setup.py.in  tesseract_python_module.cmake
tesseract_python/swig/: boost_filesystem_path.i  boost_uuid.i  console_bridge.i  eigen.i  eigen_geometry.i  eigen_types.i  shared_factory.i  std_filesystem_path.i  std_unique_ptr.i  tesseract_collision_bullet_python.i  tesseract_collision_fcl_python.i  tesseract_collision_python.i  tesseract_collisions_python_std_functions.h  tesseract_command_language_python.i  tesseract_command_language_python_profile_dictionary_functions.h  tesseract_command_language_python_std_functions.h  tesseract_common_python.i  tesseract_common_python_std_functions.h  tesseract_environment_python.i  tesseract_environment_python_std_functions.h  tesseract_geometry_python.i  tesseract_kinematics_kdl_python.i  tesseract_kinematics_opw_python.i  tesseract_kinematics_python.i  tesseract_motion_planners_descartes_python.i  tesseract_motion_planners_ompl_python.i  tesseract_motion_planners_python.i  tesseract_motion_planners_simple_python.i  tesseract_motion_planners_trajopt_python.i  tesseract_process_managers_python.i  tesseract_scene_graph_python.i  tesseract_srdf_python.i  tesseract_state_solver_python.i  tesseract_std_function.i  tesseract_swig_include.i  tesseract_task_composer_python.i  tesseract_time_parameterization_python.i  tesseract_type_erasure_macros.i  tesseract_urdf_python.i  tesseract_vector_reference_wrapper_instruction_typemaps.i  (+1 more)
tesseract_python/swig/trajopt/: problem_description.i
tesseract_python/tests/: tesseract_support_resource_locator.py
tesseract_python/tests/tesseract_collision/: test_collision_box_cone_unit.py  test_collision_mesh_mesh_unit.py
tesseract_python/tests/tesseract_common/: test_tesseract_common.py
tesseract_python/tests/tesseract_environment/: test_mesh_material_loading.py  test_tesseract_environment.py  test_tesseract_environment_kingroup.py
tesseract_python/tests/tesseract_geometry/: test_tesseract_geometry.py
tesseract_python/tests/tesseract_kinematics/: test_kdl_kinematics.py  test_opw_kinematics.py
tesseract_python_nb/: .env  CMakeLists.txt  DEPENDENCIES.md  MIGRATION_NOTES.md  QUICKSTART.md  README.md  conftest.py  environment.yml  pyproject.toml  setup_conda_env.sh
tesseract_python_nb/src/: tesseract_nb.h
tesseract_python_nb/tests/: conftest.py  test_examples.py
tesseract_viewer_python/: .gitignore  CMakeLists.txt  package.xml  setup.py
tesseract_viewer_python/cmake/: setup.py.in
tesseract_viewer_python/examples/: abb_irb2400_viewer.py  shapes_viewer.py  shapes_viewer_ssl_webxr_headset.py  tesseract_material_mesh_viewer.py
tesseract_viewer_python/tesseract_robotics_viewer/: tesseract_env_to_babylon_json.py  tesseract_env_to_gltf.py  tesseract_viewer.py  tesseract_viewer_aio.py  util.py
tesseract_viewer_python/tesseract_viewer/: tesseract_viewer.py
(+785 files in other folders)
