[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2", "setuptools-scm >=8"]
build-backend = "scikit_build_core.build"

[project]
name = "tesseract-robotics-nanobind"
description = "Tesseract robotics Python bindings (nanobind)"
readme = "../README.md"
# we're keeping 3.9, since that's the python version that Rhino 8 uses
# this is in the interest of supporting the compas.dev community
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.0",
]
authors = [
    { name = "John Wason", email = "wason@wasontech.com" },
    { name = "Jelle Feringa", email = "jelle@terrestrial.construction" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "License :: OSI Approved :: Apache Software License"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/tesseract-robotics/tesseract_nanobind"
Repository = "https://github.com/tesseract-robotics/tesseract_nanobind"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra", "--strict-markers", "--tb=short"]

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"
wheel.packages = ["src/tesseract_robotics"]
cmake.version = ">=3.15"
cmake.build-type = "Release"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = ".."  # git root is parent of tesseract_nanobind/

[tool.scikit-build.cmake.define]
CMAKE_POLICY_DEFAULT_CMP0135 = "NEW"

# Note: cibuildwheel is not used because this package requires
# pre-built tesseract C++ libraries. See .github/workflows/wheels.yml
# for the custom CI that builds C++ deps first via colcon.
